frontend/depolyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frontend
  namespace: rnk-expense
  labels:
    app: frontend
    tier: web
    project: expense
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      tier: web
      project: expense
  template:
    metadata:
      labels:
        app: frontend
        tier: web
        project: expense
    spec:
      volumes:
      - name: nginx
        configMap:
          name: nginxconfigmap
          items:
            - key: nginx.conf
              path: nginx.conf
      containers:
      - name: frontend
        image: naveenrajoli/frontend:1.2
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: nginx
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
